# Computer-Graphics

./: README.md
hw0/: CMakeLists.txt  README.md
hw0/include/: utils.h
hw0/lib/: glfw3dll.exp
hw0/src/: CMakeLists.txt  context_manager.cpp  main.cpp
hw0/vs2019/: HW0.sln  HW0.vcxproj  HW0.vcxproj.filters
hw0/vs2019/glfw/: glfw.vcxproj
hw1/: 311605004 劉子齊 - Homework 1 Report.docx  README.md
hw1/lib/: glfw3dll.exp  glfw3dll.lib
hw1/script/: pack.sh
hw1/src/: camera.cpp  main.cpp
hw1/vs2019/: HW1.vcxproj  HW1.vcxproj.filters  UpgradeLog.htm
hw2/: 311605004 劉子齊 - Homework 2 Report.docx  README.md
hw2/assets/shaders/: basic.frag  basic.vert  light.frag  light.vert
hw2/include/: program.h
hw2/lib/: glfw3dll.exp
hw2/src/: main.cpp  model.cpp
hw2/src/Programs/: basic.cpp  example.cpp  light.cpp
hw2/vs2019/: HW2.vcxproj  HW2.vcxproj.filters
hw3/: README.md
hw3/assets/shaders/: filter.frag  filter.vert  light.frag  light.vert  shadow.frag  shadow.vert  shadowLight.frag  shadowLight.vert  skybox.frag  skybox.vert
hw3/include/: camera.h  constants.h  context.h  gl_helper.h  model.h  program.h
hw3/lib/: glfw3dll.exp  glfw3dll.lib
hw3/script/: pack.ps1  pack.sh
hw3/src/: CMakeLists.txt  gl_helper.cpp  main.cpp  model.cpp
hw3/src/Programs/: filter.cpp  light.cpp  program.cpp  shadow.cpp  shadowLight.cpp  skybox.cpp
hw3/vs2019/: HW3.sln  HW3.vcxproj  HW3.vcxproj.filters
